# toolkit

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  biome.json  docker-compose.dev.yml  docker-compose.yml  package.json  tsconfig.json
.github/workflows/: ci.yml  release.yml
apps/api/: Dockerfile  package.json
apps/api/src/: app.ts  index.ts
apps/api/src/adapters/: http.test.ts  http.ts  mcp.test.ts  mcp.ts
apps/api/src/clients/: classifier.test.ts  classifier.ts  gliner.test.ts  gliner.ts  py.test.ts  py.ts  reranker.test.ts  reranker.ts  searxng.test.ts  searxng.ts
apps/api/src/lib/: env.test.ts  env.ts  tool.test.ts  tool.ts
apps/api/src/tools/: registry.ts
apps/api/src/tools/chunk/: chunk-late.test.ts  chunk-late.ts  chunk-semantic.test.ts  chunk-semantic.ts  index.ts
apps/api/src/tools/classify/: classify-domain.test.ts  classify-domain.ts  index.ts
apps/api/src/tools/convert/: convert-file.test.ts  convert-file.ts  convert-url.test.ts  convert-url.ts  index.ts
apps/api/src/tools/extract/: extract-structured.test.ts  extract-structured.ts  index.ts
apps/api/src/tools/intent/: detect-intent.test.ts  detect-intent.ts  index.ts
apps/api/src/tools/ping/: index.ts  ping.test.ts  ping.ts
apps/api/src/tools/rerank/: index.ts  rerank.test.ts  rerank.ts
apps/api/src/tools/sanitize/: index.ts  sanitize-text.test.ts  sanitize-text.ts
apps/api/src/tools/web/: index.ts  web-search.test.ts  web-search.ts
apps/py/: Dockerfile  pyproject.toml
apps/py/src/toolkit_py/: __init__.py  errors.py  main.py
apps/py/src/toolkit_py/chunk/: __init__.py  fixed.py  late.py  semantic.py
apps/py/src/toolkit_py/convert/: __init__.py  engines.py  fetch.py
apps/py/src/toolkit_py/extract/: __init__.py  instructor_runner.py
apps/py/src/toolkit_py/sanitize/: __init__.py  presidio_runner.py
apps/py/tests/: conftest.py  test_chunk.py  test_convert.py  test_extract.py  test_sanitize.py
apps/py/tests/fixtures/: sample.html
docs/: ADDING_A_TOOL.md  DEPLOYMENT.md
docs/tools/: chunk-late.md  chunk-semantic.md  classify-domain.md  convert-file.md  convert-url.md  detect-intent.md  extract-structured.md  rerank.md  sanitize-text.md  web-search.md
searxng/: settings.yml
